# ballistic

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
docs/: IR_DESIGN_DOC.md  PROGRAMMING_RULES.md  header_template.h  source_template.c
include/: bal_assembler.h  bal_assert.h  bal_attributes.h  bal_decoder.h  bal_engine.h  bal_errors.h  bal_ir_emitter.h  bal_logging.h  bal_memory.h  bal_platform.h  bal_types.h
spec/arm64_xml/: abs.xml  abs_advsimd.xml  accounts.xsl  adc.xml  adcs.xml  add_addsub_ext.xml  add_addsub_imm.xml  add_addsub_shift.xml  add_advsimd.xml  addg.xml  addhn_advsimd.xml  addp_advsimd_pair.xml  addp_advsimd_vec.xml  adds_addsub_ext.xml  adds_addsub_imm.xml  adds_addsub_shift.xml  addv_advsimd.xml  adr.xml  adrp.xml  aesd_advsimd.xml  aese_advsimd.xml  aesimc_advsimd.xml  aesmc_advsimd.xml  alphaindex.xsl  and_advsimd.xml  and_log_imm.xml  and_log_shift.xml  ands_log_imm.xml  ands_log_shift.xml  asrv.xml  at_sys.xml  autda.xml  autdb.xml  autia.xml  autib.xml  axflag.xml  b_cond.xml  b_uncond.xml  bc_cond.xml  bcax_advsimd.xml  (+728 more)
spec/arm64_xml/diff-from-ISA_A64_xml_A_profile-2022-09/: abs_z_p_z.html  adclb_z_zzz.html  adclt_z_zzz.html  add_z_p_zz.html  add_z_zi.html  add_z_zz.html  addha_za_pp_z.html  addhnb_z_zz.html  addhnt_z_zz.html  addp_z_p_zz.html  addpl_r_ri.html  addqv_z_p_z.html  addspl_r_ri.html  addsvl_r_ri.html  addva_za_pp_z.html  addvl_r_ri.html  adr_z_az.html  aesd_z_zz.html  aese_z_zz.html  aesimc_advsimd.html  aesimc_z_z.html  aesmc_advsimd.html  aesmc_z_z.html  and_p_p_pp.html  and_z_p_zz.html  and_z_zi.html  and_z_zz.html  andqv_z_p_z.html  ands_p_p_pp.html  andv_r_p_z.html  asr_z_p_zi.html  asr_z_p_zw.html  asr_z_p_zz.html  asr_z_zi.html  asr_z_zw.html  asrd_z_p_zi.html  asrr_z_p_zz.html  autda.html  autdb.html  autia.html  (+654 more)
spec/arm64_xml/xhtml/: abs.html  abs_advsimd.html  abs_z_p_z.html  adc.html  adclb_z_zzz.html  adclt_z_zzz.html  adcs.html  add_addsub_ext.html  add_addsub_imm.html  add_addsub_shift.html  add_advsimd.html  add_mz_zzv.html  add_z_p_zz.html  add_z_zi.html  add_z_zz.html  add_za_zw.html  add_za_zzv.html  add_za_zzw.html  addg.html  addha_za_pp_z.html  addhn_advsimd.html  addhnb_z_zz.html  addhnt_z_zz.html  addp_advsimd_pair.html  addp_advsimd_vec.html  addp_z_p_zz.html  addpl_r_ri.html  addqv_z_p_z.html  adds_addsub_ext.html  adds_addsub_imm.html  adds_addsub_shift.html  addspl_r_ri.html  addsvl_r_ri.html  addv_advsimd.html  addva_za_pp_z.html  addvl_r_ri.html  adr.html  adr_z_az.html  adrp.html  aesd_advsimd.html  (+1995 more)
src/: IR_DESIGN_DOC.md  bal_assembler.c  bal_assert.c  bal_decoder.c  bal_decoder_table_gen.c  bal_decoder_table_gen.h  bal_engine.c  bal_engine.h  bal_errors.c  bal_errors.h  bal_ir_emitter.c  bal_logging.c  bal_memory.c  bal_memory.h  bal_translator.c  bal_translator.h  bal_types.h  decoder.c  decoder.h  decoder_table_gen.c  decoder_table_gen.h
tests/: test_decoder.c  test_decoder_fuzzer.c  test_translation.c
tests/translation/: README.md  setup.h  test_movk.c  test_movn.c  test_movz.c
tools/: README.md  ballistic_cli.c  cdoc.c  coverage_cli.c  decoder_cli.c  doctest.py  fuzz_decoder.py  generate_a64_table.py
